# tenacious-bench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  schema.json
bench_corpus/: __init__.py  anchor_packs.py  audit_probe_registry.py  authoring_modes.py  constants.py  critic_prompt.py  preference_mutators.py  preference_pair_generation.py  scenario_catalog.py  scenarios.py  seeds.py  textsafe.py
data/: company_seeds.json  judge_filter_log.jsonl  tasks_all.jsonl  tasks_dev.jsonl  tasks_heldout.jsonl  tasks_train.jsonl
docs/: Conversion_Engine_and_Tenacious_Bench_Explained.md  act_v_blog_post.md  act_v_community_issue_template.md  act_v_executive_memo.md  act_v_publish_and_community_guide.md  audit_memo.md  datasheet.md  four_mode_authoring.md  inter_rater_human_protocol.md  methodology.md  methodology_rationale.md  rubric_revision_log.md
evaluation/: critic_logprob.py  hub_quiet.py  scoring_evaluator.py
generation/: contamination_check.py  dedup_pairwise.py  generate_tasks.py  judge_filter.py  model_routing.py  openrouter_judge.py  pointwise_judge.py  routing_policy.md
prompts/: judge_pairwise.md  judge_pointwise.md
reports/: ablation_results.json  act_v_urls.json  composition_actual.json  composition_crosstab.md  contamination_check.json  cost_log.md  evidence_graph.json  held_out_traces.jsonl  heldout_placeholder.jsonl  heldout_preference_pairs.jsonl  inter_rater_agreement.md  interim_report.md  judge_filter_pipeline.json  model_card.md  sample_scores.jsonl  train_placeholder.jsonl  training_run_metrics.jsonl
scripts/: build_corpus.py  build_heldout_eval_pairs.py  build_path_b_preferences.py  build_tenacious_bench_v01_package.py  compute_inter_rater_agreement.py  emit_evidence_graph.py  emit_model_card.py  export_unsloth_splits.py  generate_memo_pdf.py  hf_act_v_upload_helper.py  materialize_corpus.py  prefetch_hub_model.py  run_contamination_check.py  run_judge_filter_pipeline.py  run_sealed_ablation.py  verify_act_v_deliverables.py  verify_audit_probe_coverage.py  verify_composition.py  verify_materialized_task_coverage.py  verify_scenario_catalog_integrity.py  verify_training_data_leakage.py
synthesis_memos/: memo_chen_emnlp2025_contamination.md  memo_gebru_pushkarna_documentation.md  memo_gu_llm_as_judge.md  memo_hong_orpo_path_b.md  (+5 more)
(+24 files in other folders)
